js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-function-await-import-assertions-trailing-comma-second.js
async
function
f
(
)
{
await
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
)
;
}
reportCompare
(
0
0
)
;
